# kube

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  generate_job.py  main.py  pyproject.toml  test.ipynb  train.yaml
configs/: kubernetes.yaml
configs/template/: kubernetes.yaml
kube_jobs/: train.yaml
