[project]
name = "llm-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "click>=8.2.1",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "transformers>=4.52.4",
]


[project.scripts]
generate-job = "generate_job:main"
